<resources>
    <string name="app_name">张庄路街道办事处</string>
    <string name="title_tips">提示</string>
    <string name="title_tips_confim">确定</string>
    <string name="title_tips_cancel">取消</string>
    <string name="more">更多</string>
    <string name="no_iamge">暂无图片</string>
    <string name="resert_password">重置密码</string>
    <string name="no_content">管理部门暂未添加信息</string>
    <string name="pelease_write_mailbox">请填写邮箱</string>
    <string name="home_address">家庭住址</string>
    <string name="selector_reach_max_image_hint">您已经选择%d张图片了!</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="msg_no_camera">无法启动相机!</string>
    <string name="camera_temp_file_error">图片错误</string>
    <string name="selector_folder_all">所有图片</string>
    <string name="selector_caption">选择图片</string>
    <!--http://stackoverflow.com/questions/17502824/whats-wrong-with-this-format-string-->
    <string name="selector_permission_error">权限错误，无法正常工作！</string>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="selector_action_done">完成(%1$d/%2$d)</string>
    <string name="selector_preview">预览</string>
    <string name="please_login_first">请先登录</string>
    <string name="question_square">问题广场</string>
    <string name="add">添加</string>
    <string name="map">地图</string>

    <!--注册登陆-->
    <string name="login">用户登陆</string>
    <string name="register">用户注册</string>
    <string name="please_writer_phone">请填写手机号</string>
    <string name="please_writer_password">请填写验证码</string>
    <string name="please_writer_password_aga">请确认密码</string>
    <string name="please_writer_chickname">请填写昵称</string>
    <string name="please_writer_registercode">请填短信验证码</string>
    <string name="get_registercode">获取短信验证码</string>
    <string name="register_suss">注册成功</string>
    <string name="login_suss">登陆成功</string>
    <string name="cannot_null">用户信息不能为空</string>
    <string name="password_unlikeliness">两次密码不一致</string>

    //社区简介
    <string name="community_profile">街道简介</string>
    <string name="community_mdept">内部机构</string>
    <string name="community_details">简介详情</string>

    //党建宣传
    <string name="the_party_propaganda">党建宣传</string>
    <string name="the_party_propaganda_detail">详情</string>

    //宣传之窗
    <string name="propaganda_window">宣传之窗</string>
    <string name="work_trends">工作动态</string>
    <string name="community_mien">社区风采</string>
    <string name="activity_photo">活动照片</string>
    <string name="activity_content">活动内容</string>
    <string name="first_paper">已经是第一张</string>
    <string name="last_paper">已经是最后一张</string>

    //通知公告
    <string name="catalog_and_announcemen">通知公告</string>
    <string name="catalog_and_announcemen_detail">通知公告详情</string>
    <string name="policy">政策</string>
    <string name="ctalog">通知</string>
    <string name="announcemen">公告</string>

    //行政办公
    <string name="administrative_office">考勤打卡</string>
    <string name="work_office">行政办公</string>
    <string name="workoffice_ricap">日程安排</string>
    <string name="workoffice_huiytz">会议通知</string>
    <string name="workoffice_1">请假申请</string>
    <string name="workoffice_2">用章申请</string>
    <string name="workoffice_3">用车申请</string>
    <string name="workoffice_name">请填写姓名</string>
    <string name="workoffice_num">请填数字</string>
    <string name="workoffice_time">点击选择时间</string>
    <string name="workoffice_date">点击选择日期</string>
    <string name="workoffice_image">请选择图片</string>
    <string name="workoffice_attach">请选择附件</string>
    <string name="workoffice_send">请选择接收人</string>
    <string name="workoffice_copy">请选择抄送人</string>
    <string name="workoffice_reason">请添加事由</string>

    //办事指南
    <string name="work_guide">办事指南</string>
    <string name="work_guide_list">办事事项</string>
    <string name="work_guide_details">材料审核</string>
    <string name="face_freeman">面向公民</string>
    <string name="face_corporation">面向法人</string>
    <string name="reservation_service">预约办事</string>
    <string name="areyousure_reservation">您确定预约次事件吗？</string>
    <string name="please_select_time">请选择时间</string>
    <string name="query_upquestion">问题上报查询</string>
    <string name="query_activity">预约活动查询</string>
    <string name="query_workguide">预约办事查询</string>
    <string name="up_myinfor">完善个人信息</string>
    <string name="phone">电话:</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>


    //街道12345
    <string name="community123">街道12345</string>

    //便民服务
    <string name="convenience_services">行政办公</string>
    <string name="party_building_propaganda">党建宣传</string>

</resources>
