<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_perfect_myinfor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="az.com.newazhong.utilsclass.person.activity.PerfectMyInforActivity">

    <az.com.newazhong.utilsclass.myViews.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/up_myinfor">
    </az.com.newazhong.utilsclass.myViews.Header>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:padding="4dp">
        <!--手机号-->
        <LinearLayout
            android:layout_marginTop="20dp"
            style="@style/linerlayout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:padding="7dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_phone"/>
            <EditText
                android:id="@+id/userPhone"
                style="@style/EditText"
                android:layout_gravity="center"
                android:hint="@string/please_writer_phone"/>
        </LinearLayout>
        <View style="@style/line"/>

        <!--昵称-->
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/linerlayout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="7dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_chick_name"/>

            <EditText
                android:id="@+id/userChickName"
                style="@style/EditText"
                android:hint="@string/please_writer_chickname"/>
        </LinearLayout>
        <View style="@style/line"/>

        <!--邮箱-->
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/linerlayout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:padding="7dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_identifying_code"/>
            <EditText
                android:id="@+id/userMailbox"
                style="@style/EditText"
                android:hint="@string/pelease_write_mailbox"/>
        </LinearLayout>
        <View style="@style/line" />

        <!--家庭住址 -->
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/linerlayout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:padding="7dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ueser_password"
                android:gravity="center"/>
            <EditText
                android:id="@+id/userAddress"
                style="@style/EditText"
                android:hint="@string/home_address"/>
        </LinearLayout>
        <View style="@style/line"/>

        <!--个人头像-->
        <ImageView
            android:id="@+id/add_myphoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/add_myphoto"
            android:scaleType="fitXY"
            android:layout_marginRight="2dp" />

        <Button
            android:id="@+id/userSendData"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:background="@drawable/custom_progress_radius"
            style="@style/Button"
            android:text="@string/title_tips_confim"/>

    </LinearLayout>

</LinearLayout>
