<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="az.com.newazhong.propagandwindow.activity.PartyPropagandaWinActivity">

    <az.com.newazhong.utilsclass.myViews.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/propaganda_window">
    </az.com.newazhong.utilsclass.myViews.Header>

    //子菜单1排
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWorkTrends"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:gravity="center"
            android:background="@color/white"
            android:drawableTop="@drawable/work_trends"
            android:text="@string/work_trends"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/btnCommunityMien"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:gravity="center"
            android:background="@color/white"
            android:drawableTop="@drawable/community_mien"
            android:text="@string/community_mien"
            android:textSize="15dp"/>

    </LinearLayout>


</LinearLayout>
